Fix issues on mobile

--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -14,6 +14,12 @@
     .navbar-brand {
         margin-left: 1rem;
     }
+
+    .section-annotation {
+        color: grey;
+        font-size: 0.75em;
+        display: block;
+    }
 }
 
 @media (min-width: 991.98px) {
@@ -25,6 +31,13 @@
         color: white;
         font: initial;
     }
+
+    .section-annotation {
+        color: grey;
+        font-size: 0.75em;
+        margin-left: 1em;
+        display: inline-block;
+    }
 }
 
 .bg-dark {
@@ -33,12 +46,6 @@
 
 p, h1, h2, h3, h4, h5, h6, span {
     color: #34393b;
-}
-
-.section-annotation {
-    color: grey;
-    font-size: 0.75em;
-    margin-left: 1em;
 }
 
 section {
